--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function toggleMenu( {
 
     <!-- Alien Earth Movie Card -->
     <div class="movie-card">
-      <img src="Images/Alien Earth - Copy.jpeg" alt="Alien Earth (2025)">
+      <img src="Alien Earth - Copy.jpeg" alt="Alien Earth (2025)">
       <div class="movie-info">
         <h3>
           <a href="https://vegamovies.gmbh/download-alien-earth-2025-season-1-hindi-dubbed-org-series-480p-720p-1080p/" target="_blank">
@@ -61,7 +61,7 @@ function toggleMenu( {
 
     <!-- Tenet Movie Card (beside Alien Earth) -->
     <div class="movie-card">
-      <img src="Images/tenet.jpeg" alt="Tenet (2020)">
+      <img src="tenet.jpeg" alt="Tenet (2020)">
       <div class="movie-info">
         <h3>
           <a href="https://vegamovies.gmbh/download-tenet-2020-hindi-engish-480p-720p-1080p/" target="_blank">
@@ -213,6 +213,7 @@ function toggleMenu( {
     }
   }
 </script>
+
 
 
 
